--- a/_posts/2018-10-21-mapa-coropltico-com-ggplot2/mapa-coropltico-com-ggplot2.Rmd
+++ b/_posts/2018-10-21-mapa-coropltico-com-ggplot2/mapa-coropltico-com-ggplot2.Rmd
@@ -9,6 +9,9 @@ date: 10-21-2018
 output:
   radix::radix_article:
     self_contained: false
+categories:
+  - Visualizações
+  - ggplot2
 ---
 
 ```{r setup, include=FALSE}
